src/main/resources/tests/Semantics/good/forLoop1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
    variable2 : integer;
begin
   -- Test for loop
   for variable1 in 1 .. 10 loop
      variable2 := variable1;
   end loop;
end TestLoops;
