src/main/resources/tests/Semantics/bad/forLoop3.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin

   for variable1 in 'a' .. 'z' loop -- Error: range should be integer or character
      put('E');
   end loop;
end TestLoops;
